--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -938,7 +938,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x284b045a0c8>"
+       "<matplotlib.collections.PathCollection at 0x1b7dc479188>"
       ]
      },
      "execution_count": 23,
@@ -971,7 +971,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x284b04a4808>"
+       "<matplotlib.collections.PathCollection at 0x1b7dc613bc8>"
       ]
      },
      "execution_count": 24,
@@ -1006,7 +1006,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x284b06cb908>"
+       "<matplotlib.legend.Legend at 0x1b7dc6ebcc8>"
       ]
      },
      "execution_count": 25,
@@ -1049,7 +1049,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x284b0767f08>"
+       "<matplotlib.legend.Legend at 0x1b7dc5fc148>"
       ]
      },
      "execution_count": 26,
@@ -1092,7 +1092,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x284b07ea148>"
+       "<matplotlib.legend.Legend at 0x1b7dc7be888>"
       ]
      },
      "execution_count": 27,
@@ -2144,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2157,7 +2157,7 @@
        "Name: driver_count, dtype: float64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2170,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
